@@ -1,7 +1,10 @@
  Changes from 1.9.4 to 1.9.2
 ----------------------------
-**
-    * [FELIX-4047] -  Unable to single valued (String) array property
+** Bug
+    * [FELIX-4047] - Unable to single valued (String) array property
+
+** Improvement
+    * [FELIX-4063] - Avoid warnings when using @SlingServlet and @SlingFilter annotations 
 
 
  Changes from 1.9.2 to 1.9.0
